--- a/sell/package.json
+++ b/sell/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "better-scroll": "^0.1.7",
     "components": "^0.1.0",
+    "food": "^0.3.5",
+    "good": "^7.2.0",
+    "split": "^1.0.0",
     "vue": "^2.2.6",
     "vue-resource": "^*",
     "vue-router": "^2.1.0"
