--- a/package.json
+++ b/package.json
@@ -8,11 +8,13 @@
     "src"
   ],
   "scripts": {
-    "dev": "webpack-dev-server --content-base test/ --open --inline --hot --compress --history-api-fallback --port 3003 --host 192.168.1.155 --config build/webpack.dev.config.js",
+    "dev": "webpack-dev-server --content-base test/ --open --inline --hot --compress --history-api-fallback --port 3003 --config build/webpack.dev.config.js",
     "dist:style": "gulp --gulpfile build/build-style.js",
     "dist:dev": "webpack --config build/webpack.dist.dev.config.js",
     "dist:prod": "webpack --config build/webpack.dist.prod.config.js",
-    "dist": "npm run dist:style && npm run dist:dev && npm run dist:prod"
+    "dist": "npm run dist:style && npm run dist:dev && npm run dist:prod",
+    "unit": "cross-env BABEL_ENV=test karma start test/karma.conf.js",
+    "test": "npm run unit"
   },
   "repository": {
     "type": "git",
@@ -71,7 +73,19 @@
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.11.0",
     "webpack-dev-server": "^2.11.1",
-    "webpack-merge": "^3.0.0"
+    "webpack-merge": "^3.0.0",
+    "chai":"^4.1.2",
+    "mocha":"^5.2.0",
+    "karma": "^3.0.0",
+    "karma-chai":"^0.1.0",
+    "karma-chrome-launcher":"^2.2.0",
+    "karma-coverage":"^1.1.2",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher":"^1.0.4",
+    "karma-sourcemap-loader":"^0.3.7",
+    "karma-spec-reporter":"^0.0.32",
+    "karma-webpack":"^3.0.5",
+    "@vue/test-utils": "^1.0.0-beta.13"
   },
   "engines": {
     "node": ">=8.9.1",
