--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ivue-material",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "A high quality UI components Library with Vue.js",
   "main": "dist/ivue.js",
   "files": [
@@ -26,7 +26,7 @@
     "raf": "^3.4.0"
   },
   "peerDependencies": {
-    "vue": "^2.5.17"
+    "vue": "^2.5.21"
   },
   "devDependencies": {
     "autoprefixer-loader": "^3.2.0",
@@ -71,7 +71,7 @@
     "vue-hot-reload-api": "^2.3.0",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^14.2.1",
-    "vue-router": "^3.0.1",
+    "vue-router": "^3.0.2",
     "vue-style-loader": "^4.0.2",
     "vue-template-compiler": "^2.5.16",
     "webpack": "^3.11.0",
@@ -90,7 +90,7 @@
     "karma-webpack": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.13",
     "babel-plugin-istanbul": "^5.1.0",
-    "ivue-material": "^0.1.0"
+    "ivue-material": "0.1.1"
   },
   "engines": {
     "node": ">=8.9.1",
