--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ivue-material",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "A high quality UI components Library with Vue.js",
   "main": "dist/ivue.js",
   "files": [
@@ -11,9 +11,9 @@
     "dev": "webpack-dev-server --content-base test/ --open --inline --hot --compress --history-api-fallback --port 3003  --config build/webpack.dev.config.js",
     "dist:style": "gulp --gulpfile build/build-style.js",
     "dist:dev": "webpack --config build/webpack.dist.dev.config.js",
-    "dist:prod": "webpack --config build/webpack.dist.prod.config.js",
-    "dist": "npm run dist:style && npm run dist:dev && npm run dist:prod",
-    "unit": "cross-env BABEL_ENV=test karma start test/karma.conf.js",
+    "dist:prod": "webpack --coe && npm run dist:dev && npm run dist:prod",
+    "unit": "cross-env BABELnfig build/webpack.dist.prod.config.js",
+    "dist": "npm run dist:styl_ENV=test karma start test/karma.conf.js",
     "test": "npm run unit"
   },
   "repository": {
@@ -90,7 +90,7 @@
     "karma-webpack": "^3.0.5",
     "@vue/test-utils": "^1.0.0-beta.13",
     "babel-plugin-istanbul": "^5.1.0",
-    "ivue-material": "0.1.1"
+    "ivue-material": "0.1.2"
   },
   "engines": {
     "node": ">=8.9.1",
