--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ivue-material",
-  "version": "0.3.9-base0.2",
+  "version": "0.4.0",
   "description": "A high quality UI components Library with Vue.js",
   "main": "dist/ivue.js",
   "files": [
