--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/qq282126990/iVue"
+    "url": "https://github.com/qq282126990/ivue-ui"
   },
   "author": "qq282126990",
   "dependencies": {
