--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "dependencies": {
     "v-click-outside-x": "^3.2.2",
     "raf": "^3.4.0",
-    "lodash.throttle":"^4.1.1"
+    "lodash.debounce":"^4.0.8"
   },
   "peerDependencies": {
     "vue": "^2.5.21"
@@ -93,7 +93,7 @@
     "webpack-bundle-analyzer": "^3.0.3",
     "webpack-dev-server": "^2.11.1",
     "webpack-merge": "^3.0.0",
-    "lodash.throttle":"^4.1.1"
+    "lodash.debounce":"^4.0.8"
   },
   "engines": {
     "node": ">=8.9.1",
