you can use ivue material  in vue 2.6.9  , v-for use   need plus appear on transition

--- a/.babelrc
+++ b/.babelrc
@@ -36,14 +36,7 @@
     "transform-es5-property-mutators",
     "transform-object-rest-spread",
     "transform-runtime",
-    "transform-vue-jsx",
-    [
-      "import",
-      {
-        "libraryName": "ivue",
-        "libraryDirectory": "src/components"
-      }
-    ]
+    "transform-vue-jsx"
   ],
   "comments": false
 }
