--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dependencies": {
       "v-click-outside-x": "^3.2.2",
       "raf": "^3.4.0",
-      "lodash.debounce":"^4.0.8"
+      "lodash.debounce":"^4.0.8",
+      "popper.js":"^1.15.0"
     },
     "peerDependencies": {
       "vue":"^2.6.9"
