--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
       "babel-cli": "^6.26.0",
       "babel-core": "^6.26.0",
       "babel-helper-vue-jsx-merge-props": "^2.0.3",
-      "babel-loader": "^7.1.4",
+      "babel-loader": "^7.1.5",
       "babel-plugin-dynamic-import-node": "^1.2.0",
       "babel-plugin-import": "^1.8.0",
       "babel-plugin-istanbul": "^5.1.0",
@@ -67,16 +67,17 @@
       "html-loader": "^0.5.5",
       "html-webpack-plugin": "^3.0.6",
       "ivue-material": "^0.5.4",
-      "karma": "^3.0.0",
       "karma-chai": "^0.1.0",
-      "karma-chrome-launcher": "^2.2.0",
-      "karma-coverage": "^1.1.2",
-      "karma-mocha": "^1.3.0",
       "karma-phantomjs-launcher": "^1.0.4",
+      "karma": "^2.0.5",
+      "karma-chrome-launcher": "^2.2.0",
+      "karma-coverage": "^1.1.1",
+      "karma-mocha": "^1.3.0",
+      "karma-sinon-chai": "^1.3.3",
       "karma-sourcemap-loader": "^0.3.7",
       "karma-spec-reporter": "^0.0.32",
-      "karma-webpack": "^3.0.5",
-      "mocha": "^5.2.0",
+      "karma-webpack": "^2.0.13",
+      "mocha": "^5.0.4",
       "node-sass": "^4.9.3",
       "raf": "^3.4.0",
       "sass-loader": "^7.1.0",
