--- a/package.json
+++ b/package.json
@@ -81,8 +81,9 @@
         "webpack": "^4.29.6",
         "webpack-bundle-analyzer": "^3.1.0",
         "webpack-cli": "^3.2.3",
-        "webpack-dev-middleware": "^3.6.1",
-        "webpack-hot-middleware": "^2.24.3",
+        "webpack-dev-middleware": "^3.7.0",
+        "webpack-hot-middleware": "^2.25.0",
+        "webpack-dev-server": "^3.8.0",
         "webpack-merge": "^4.2.1",
         "ivue-material": "^0.6.3",
         "sass-loader": "^7.1.0",
