--- a/.babelrc
+++ b/.babelrc
@@ -1,7 +1,7 @@
 {
     "presets": [
         [
-            "env",
+            "@babel/preset-env",
             {
                 "loose": false,
                 "modules": "commonjs",
@@ -18,10 +18,10 @@
                     ]
                 },
                 "useBuiltIns": "usage",
+                "corejs": 3,
                 "debug": false
             }
-        ],
-        "stage-3"
+        ]
     ],
     "env": {
         "test": {
@@ -32,11 +32,19 @@
     },
     "plugins": [
         "dynamic-import-node",
-        "transform-class-properties",
-        "transform-es5-property-mutators",
-        "transform-object-rest-spread",
-        "transform-runtime",
-        "transform-vue-jsx"
+        "@babel/plugin-proposal-class-properties",
+        "@babel/plugin-transform-property-mutators",
+        "@babel/plugin-proposal-object-rest-spread",
+        [
+            "@babel/plugin-transform-runtime",
+            {
+                "corejs": 2
+            }
+        ],
+        "transform-vue-jsx",
+        "@babel/plugin-syntax-dynamic-import",
+        "@babel/plugin-syntax-import-meta",
+        "@babel/plugin-proposal-json-strings"
     ],
     "comments": false
 }
