--- a/package.json
+++ b/package.json
@@ -32,10 +32,8 @@
     "vue": "^2.6.9"
   },
   "devDependencies": {
-    "@babel/runtime-corejs2": "^7.5.5",
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "babel-plugin-syntax-jsx": "^6.18.0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/plugin-proposal-json-strings": "^7.2.0",
     "@babel/plugin-proposal-object-rest-spread": "^7.5.5",
@@ -45,6 +43,7 @@
     "@babel/plugin-transform-property-mutators": "^7.2.0",
     "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
+    "@babel/runtime-corejs2": "^7.5.5",
     "@vue/test-utils": "^1.0.0-beta.13",
     "autoprefixer-loader": "^3.2.0",
     "babel-helper-vue-jsx-merge-props": "^2.0.3",
@@ -52,6 +51,7 @@
     "babel-plugin-dynamic-import-node": "^1.2.0",
     "babel-plugin-import": "^1.8.0",
     "babel-plugin-istanbul": "^5.1.0",
+    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-vue-jsx": "^3.7.0",
     "chai": "^4.1.2",
     "compression-webpack-plugin": "^1.1.10",
@@ -60,14 +60,14 @@
     "deepmerge": "^2.0.1",
     "eslint": "^3.19.0",
     "eslint-plugin-vue": "^2.1.0",
-    "extract-text-webpack-plugin": "^2.1.2",
+    "extract-text-webpack-plugin": "^3.0.0",
     "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^5.0.0",
     "gulp-clean-css": "^3.9.3",
     "gulp-rename": "^1.2.2",
-    "gulp-sass": "^4.0.1",
+    "gulp-sass": "^5.1.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.0.6",
     "ivue-material": "^0.5.4",
@@ -83,9 +83,9 @@
     "karma-webpack": "^2.0.13",
     "lodash.debounce": "^4.0.8",
     "mocha": "^5.0.4",
-    "node-sass": "^4.9.3",
     "raf": "^3.4.0",
-    "sass-loader": "^7.1.0",
+    "sass": "^1.52.3",
+    "sass-loader": "^7.3.1",
     "style-loader": "^0.20.2",
     "uglifyjs-webpack-plugin": "^1.2.3",
     "url-loader": "^1.0.1",
